# ai-native-sdlc

./: .gitignore  .terraformignore  LICENSE  PM_Framework.md  README.md  check_mermaid.js  copilot_response.txt  dummy-file.js  ecommerce-api.js  feature_output.json  link-wiki-to-workitem.sh  pyproject.toml  pytest.ini  question_detection.json  requirements.txt  short_name_output.txt  spec_output.txt  spec_prompt.txt  test-file.js  test-github-models.py
.azure-pipelines/: spec-dispatch.yml
.cursorrules/: 00-project-context.md  README.md  ado-integration.md  azure-functions.md  azure-infrastructure.md  documentation.md  git-workflow.md  github-actions.md  python.md  shell.md  spec-kit.md  terraform.md  validation.md
.github/: copilot-instructions.md
docs/: github-app-setup.md  quickstart-github-app.md  workflow.md
function_app/: .funcignore  LOCAL_TESTING.md  README.md  UPDATE_PAT.md  __init__.py  ado_client.py  app_logging.py  check-logs.sh  config.py  constants.py  debug-test.sh  diagnose-dispatch.sh  dispatch.py  function_app.py  local.settings.json  models.py  requirements.txt  test-ado-update.py  test-real-workitem.sh  test_real_payload.py  test_validation_fix.py  util.py  validation.py
infra/: AZURE_OPENAI_TERRAFORM.md  README.md  SECURITY.md  ai-foundry.tf  main.tf  main.tf.old  outputs.tf  providers.tf  security_validation.tf  variables.tf
scripts/: check_graph_permissions.py  cleanup-resources.sh  update-azure-openai-firewall.sh  update-deployment-ip.sh  validate_diagrams.sh
spec-kit-output/: feature_output.json  short_name_output.txt  spec_output.txt
(+182 files in other folders)
